fixes web components style

--- a/nextjs/src/app/globals.css
+++ b/nextjs/src/app/globals.css
@@ -1,4 +1,5 @@
 @import "tailwindcss";
+@import "@jesusrugama/stencil-design-system/dist/stencil-design-system/stencil-design-system.css";
 
 :root {
   --background: #ffffff;
